<resources>
    <string name="app_name">XiaodiIf</string>
    <string name="init_library">库初始化</string>
    <string name="as_login">模拟登陆</string>
    <string name="as_add_lock">模拟添加设备</string>
    <string name="wifi">配置wifi</string>
    <string name="upload_log">上传日志</string>
    <string name="load_device_list">加载设备列表</string>
    <string name="clear_smartkey">清空智能钥匙</string>
    <string name="logout_device">注销锁具</string>
</resources>
